// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<p
  className="sc-AxjAm iVSsOx sinoui-typography sinoui-typography--caption"
  color="textPrimary"
  type="caption"
>
  Caption
</p>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-AxjAm iVSsOx sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </h2>,
  <p
    className="sc-AxjAm gflNzd sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-AxjAm lcoFoA sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-AxjAm beMvsd sinoui-typography sinoui-typography--caption"
    color="success"
    type="caption"
  >
    Caption
  </p>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <p
    className="sc-AxjAm iVSsOx sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-AxjAm jBskRm sinoui-typography sinoui-typography--caption"
    color="primary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-AxjAm dzyEnB sinoui-typography sinoui-typography--caption"
    color="secondary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-AxjAm iVSsOx sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-AxjAm fTevuo sinoui-typography sinoui-typography--caption"
    color="textSecondary"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-AxjAm ijLwHk sinoui-typography sinoui-typography--caption"
    color="error"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-AxjAm ihQgsh sinoui-typography sinoui-typography--caption"
    color="warning"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-AxjAm beMvsd sinoui-typography sinoui-typography--caption"
    color="success"
    type="caption"
  >
    Caption
  </p>,
  <p
    className="sc-AxjAm hbCWnZ sinoui-typography sinoui-typography--caption"
    color="info"
    type="caption"
  >
    Caption
  </p>,
]
`;
